# memory-game-sp1

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  sp1-bridge.js
backend/: input.json  package-lock.json  package.json  server.js
memory_proof/program/: Cargo.toml
memory_proof/program/src/: main.rs
memory_proof/script/: Cargo.toml  build.rs
pkg/: memory_game_sp1.d.ts  memory_game_sp1.js  memory_game_sp1_bg.wasm  memory_game_sp1_bg.wasm.d.ts  package.json
src/: lib.rs
